renamed files snow

--- a/snowfallLaunchScript.html
+++ b/snowfallLaunchScript.html
@@ -1,5 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/snow.js"></script>
+<script src="/snowfall.js"></script>
 <script>
   $(document).ready(function() {
     $.snowfall('body', {
@@ -18,7 +18,7 @@
 
 
 {/* <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script acync src="/snow10.js"></script>
+<script acync src="/snowfall.js"></script>
 <script>
 setTimeout(function (argument) {
     $(document).snowfall({flakeCount : 200, minSize:5, maxSize:20, round: 4});
