changed snowfall.js file names, added files snowfallDesktopOnly.js, snowfallFromMobileToDesktop.js

--- a/snowfallLaunchScript.html
+++ b/snowfallLaunchScript.html
@@ -1,16 +1,15 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/snowfall.js"></script>
 <script>
-  $(document).ready(function() {
+  $(document).ready(function() {    
     $.snowfall('body', {
-      flakeCount: 200,
-      minSize:5, 
-      maxSize: 20,
-      round: 4
+      flakeCount: 50, // Общее количество снежинок
+      minSize: 7,     // Минимальный размер снежинки
+      maxSize: 15,    // Максимальный размер снежинки
+      round: 4        // Радиус округления снежинки
     });
   });
 </script>
-
 
 
 
