the section of code in the snowfallLaunchScript.html file is commented out

--- a/snowfallLaunchScript.html
+++ b/snowfallLaunchScript.html
@@ -15,11 +15,10 @@
 
 
 
-
-{/* <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script acync src="/snowfall.js"></script>
 <script>
 setTimeout(function (argument) {
     $(document).snowfall({flakeCount : 200, minSize:5, maxSize:20, round: 4});
   }, 5000);
-</script> */}
+</script> -->
