renamed and deleted some files and folders

--- a/snowfall/snowfallLaunchScript.html
+++ b/snowfall/snowfallLaunchScript.html
@@ -1,5 +1,5 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="/snowfall.js"></script>
+<script src="/snowfallMobileToDesktop.js"></script>
 <script>
   $(document).ready(function() {    
     $.snowfall('body', {
