added new blocks of code to file chocoBanner.js

--- a/chocoBanner/chocoBanner.html
+++ b/chocoBanner/chocoBanner.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Для запуску на Localhost port:5501 -->
+    <!-- Для запуску на liveSer port:5501 -->
     <script src="/chocoBanner/chocoBanner.js"></script>
 
 
