added variable(aktsii), to array allowedPages

--- a/snowfall/snowfallLaunchScript.html
+++ b/snowfall/snowfallLaunchScript.html
@@ -1,4 +1,16 @@
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+
+
+
+
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="/snowfallMobileToDesktop.js"></script>
 <script>
   $(document).ready(function() {    
@@ -13,8 +25,6 @@
 
 
 
-
-
 <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script acync src="/snowfall.js"></script>
 <script>
@@ -22,3 +32,7 @@ setTimeout(function (argument) {
     $(document).snowfall({flakeCount : 200, minSize:5, maxSize:20, round: 4});
   }, 5000);
 </script> -->
+
+
+</body>
+</html>
