--- a/index.html
+++ b/index.html
@@ -546,5 +546,6 @@
         });
     </script> -->
     <script src="./sale/sale2025.js"></script>
+    <!-- <script src="./sale/sale2025LocalStorage.js"></script> -->
 </body>
 </html>
