--- a/chocoBanner/chocoBanner.html
+++ b/chocoBanner/chocoBanner.html
@@ -6,11 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- Для запуску на liveSer port:5501 -->
-    <script src="/chocoBanner/chocoBanner.js"></script>
+    <!-- Для запуску на liveServer port:5501 -->
+    <script src="./chocoBanner.js"></script>
 
 
     <!-- Для запуску на сайті Buco -->
-    <script src="/chocoBanner.js"></script> 
+    <!-- <script src="/chocoBanner.js"></script>  -->
 </body>
 </html>
