--- a/scriptBeforeTagBody.html
+++ b/scriptBeforeTagBody.html
@@ -33,6 +33,7 @@
 
     <!-- jQuery  -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- КАСТОМНІ СКРИПТИ  -->
     <script src="/socialHeaderIcons.js" defer></script>
@@ -54,8 +55,6 @@
             }
         });
     </script>
-
-
 
     <!-- Заголовок партнерів -->
     <script>
